# poe-app

./: .gitignore  LICENSE  MIGRATION.md  PHASE_1_COMPLETE.md  README.md  dev.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
legacy/: README_ORIGINAL.md  editor.js  index.js  render.js  settings.js  sound.js  state.js  terminal.js
releases/: RELEASE_v1.0.0.md
releases/macos/: Poe_1.0.0_aarch64.dmg
releases/macos/Poe.app/Contents/: Info.plist
scripts/: distribute.js  package.js  version.js
src/: app.ts  editor.ts  file-manager.ts  file-ops.ts  input.ts  search.ts  settings.ts  sound.ts  state.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs
src/lib/: highlight.ts  markdown-highlight.ts  tauri-detect.ts
src/renderers/: dom.ts  types.ts
src/ui/: file-switcher.ts  search-bar.ts  settings-panel.ts
