[package]
name = "poe-app"
version = "0.1.0"
description = "Minimalista editor de markdown para desktop"
authors = ["Serlis Maldonado"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
